cargo-features = ["edition2021"]

[package]
name = "substrate-chaoscope"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/chaoscope"
homepage = "https://www.parity.io/"
description = "RPC Instrumentation toolkit for pallet-chaos"
keywords = ["parity", "substrate", "blockchain", "chaos"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
subxt = { git = "https://github.com/paritytech/subxt.git", branch = "master" }
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
env_logger = "0.8.3"